overflow mistake correction

--- a/css/project.css
+++ b/css/project.css
@@ -1,8 +1,4 @@
 
-* {
-    overflow-y: hidden;
-}
-
 /*--- BASICS ---*/
 
 .heroImg {
